fix(security): establish production-safe CORS contract